--- a/style.css
+++ b/style.css
@@ -1,1 +1,48 @@
+a {
+  color: royalblue;
+  text-decoration: none;
+}
 
+h1 {
+  font-size: 50px;
+  text-align: center;
+}
+
+h1 {
+  border-bottom: 1px solid black;
+  margin: 0;
+  padding: 20px;
+}
+
+h2 {
+  text-align: center;
+  border-width: 5px;
+  border-color: red;
+  border-style: solid;
+  width: 800px;
+}
+
+h3 {
+  text-align: center;
+  border-width: 5px;
+  border-color: red;
+  border-style: solid;
+  width: 800px;
+}
+
+h3 {
+  display: flexbox;
+}
+
+ol {
+  border-right: 1px solid gray;
+  width: 250px;
+}
+
+.container {
+  display: flexbox;
+}
+
+.card {
+  display: flex;
+}
