--- a/style.css
+++ b/style.css
@@ -11,21 +11,21 @@ h1 {
 h1 {
   border-bottom: 1px solid black;
   margin: 0;
-  padding: 20px;
+  padding: 25px;
 }
 
 h2 {
   text-align: center;
-  border-width: 5px;
-  border-color: red;
+  border-width: px;
+  border-color: green;
   border-style: solid;
-  width: 800px;
+  width: 600px;
 }
 
 h3 {
   text-align: center;
   border-width: 5px;
-  border-color: red;
+  border-color: green;
   border-style: solid;
   width: 800px;
 }
@@ -45,4 +45,21 @@ ol {
 
 .card {
   display: flex;
+}
+
+ol {
+  border-right: 1px solid gray;
+  width: 150px;
+  margin: 0;
+  padding: 30px;
+}
+body {
+  margin: 0;
+}
+#grid {
+  border: 30px solid green;
+  display: grid;
+  grid-template-columns: 600px 0fr;
+  text-align: left;
+  text size: 50px;
 }
